// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`carousel Basic 3 Slide <bolt-carousel> Renders 1`] = `
<bolt-carousel class="is-ready">
  <div class="c-bolt-carousel c-bolt-carousel--no-overflow c-bolt-carousel--initialized c-bolt-carousel--horizontal"
       style="cursor: grab;"
  >
    <div class="c-bolt-carousel__wrapper"
         style="transform: translate3d(0px, 0px, 0px);"
    >
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--visible c-bolt-carousel__slide--active"
                           style="width: 790px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <bolt-text headline>
          Slide 1
        </bolt-text>
      </bolt-carousel-slide>
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--next"
                           style="width: 790px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <bolt-text headline>
          Slide 2
        </bolt-text>
      </bolt-carousel-slide>
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready"
                           style="width: 790px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <bolt-text headline>
          Slide 3
        </bolt-text>
      </bolt-carousel-slide>
    </div>
    <div class="c-bolt-carousel__pagination c-bolt-carousel__pagination--clickable c-bolt-carousel__pagination--bullets">
      <span class="c-bolt-carousel__pagination__bullet c-bolt-carousel__pagination__bullet--active"
            tabindex="0"
            role="button"
            aria-label="Go to slide 1"
      >
      </span>
      <span class="c-bolt-carousel__pagination__bullet"
            tabindex="0"
            role="button"
            aria-label="Go to slide 2"
      >
      </span>
      <span class="c-bolt-carousel__pagination__bullet"
            tabindex="0"
            role="button"
            aria-label="Go to slide 3"
      >
      </span>
    </div>
    <span class="c-bolt-carousel__notification"
          aria-live="assertive"
          aria-atomic="true"
    >
    </span>
  </div>
  <div class="c-bolt-carousel__button c-bolt-carousel__button--previous c-bolt-carousel__button--inside c-bolt-carousel__button--disabled"
       tabindex="0"
       role="button"
       aria-label="Previous slide"
       aria-disabled="true"
  >
    <bolt-button size="medium"
                 border-radius="full"
                 color="secondary"
                 icon-only
    >
      Previous
      <bolt-icon size="large"
                 slot="before"
                 name="chevron-left"
      >
      </bolt-icon>
    </bolt-button>
  </div>
  <div class="c-bolt-carousel__button c-bolt-carousel__button--next c-bolt-carousel__button--inside"
       tabindex="0"
       role="button"
       aria-label="Next slide"
       aria-disabled="false"
  >
    <bolt-button size="medium"
                 border-radius="full"
                 color="secondary"
                 icon-only
    >
      Next
      <bolt-icon size="large"
                 slot="before"
                 name="chevron-right"
      >
      </bolt-icon>
    </bolt-button>
  </div>
</bolt-carousel>
`;

exports[`carousel Basic 3 Slide <bolt-carousel> Renders w/ Nav Controls 1`] = `
<bolt-carousel class="is-ready">
  <div class="c-bolt-carousel c-bolt-carousel--no-overflow c-bolt-carousel--initialized c-bolt-carousel--horizontal"
       style="cursor: grab;"
  >
    <div class="c-bolt-carousel__wrapper"
         style="transform: translate3d(0px, 0px, 0px);"
    >
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--visible c-bolt-carousel__slide--active"
                           style="width: 790px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <bolt-text headline>
          Slide 1
        </bolt-text>
      </bolt-carousel-slide>
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--next"
                           style="width: 790px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <bolt-text headline>
          Slide 2
        </bolt-text>
      </bolt-carousel-slide>
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready"
                           style="width: 790px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <bolt-text headline>
          Slide 3
        </bolt-text>
      </bolt-carousel-slide>
    </div>
    <div class="c-bolt-carousel__pagination c-bolt-carousel__pagination--clickable c-bolt-carousel__pagination--bullets">
      <span class="c-bolt-carousel__pagination__bullet c-bolt-carousel__pagination__bullet--active"
            tabindex="0"
            role="button"
            aria-label="Go to slide 1"
      >
      </span>
      <span class="c-bolt-carousel__pagination__bullet"
            tabindex="0"
            role="button"
            aria-label="Go to slide 2"
      >
      </span>
      <span class="c-bolt-carousel__pagination__bullet"
            tabindex="0"
            role="button"
            aria-label="Go to slide 3"
      >
      </span>
    </div>
    <span class="c-bolt-carousel__notification"
          aria-live="assertive"
          aria-atomic="true"
    >
    </span>
  </div>
  <div class="c-bolt-carousel__button c-bolt-carousel__button--previous c-bolt-carousel__button--inside c-bolt-carousel__button--disabled"
       tabindex="0"
       role="button"
       aria-label="Previous slide"
       aria-disabled="true"
  >
    <bolt-button slot="previous-btn"
                 color="secondary"
                 border-radius="full"
                 icon-only
                 tabindex="-1"
    >
      Previous
      <bolt-icon slot="before"
                 name="chevron-left"
      >
        <span class="c-bolt-icon c-bolt-icon--chevron-left c-bolt-icon--auto">
          <svg class="c-bolt-icon__icon">
            <use href="#chevron-left">
            </use>
          </svg>
        </span>
      </bolt-icon>
    </bolt-button>
  </div>
  <div class="c-bolt-carousel__button c-bolt-carousel__button--next c-bolt-carousel__button--inside"
       tabindex="0"
       role="button"
       aria-label="Next slide"
       aria-disabled="false"
  >
    <bolt-button slot="next-btn"
                 color="secondary"
                 border-radius="full"
                 icon-only
                 tabindex="-1"
    >
      Next
      <bolt-icon slot="after"
                 name="chevron-right"
      >
        <span class="c-bolt-icon c-bolt-icon--chevron-right c-bolt-icon--auto">
          <svg class="c-bolt-icon__icon">
            <use href="#chevron-right">
            </use>
          </svg>
        </span>
      </bolt-icon>
    </bolt-button>
  </div>
</bolt-carousel>
`;

exports[`carousel Basic 3 Slide <bolt-carousel> Renders w/ Outer Nav Controls 1`] = `
<bolt-carousel nav-button-position="outside"
               class="is-ready"
>
  <div class="c-bolt-carousel c-bolt-carousel--no-overflow c-bolt-carousel--initialized c-bolt-carousel--horizontal"
       style="cursor: grab;"
  >
    <div class="c-bolt-carousel__wrapper"
         style="transform: translate3d(0px, 0px, 0px);"
    >
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--visible c-bolt-carousel__slide--active"
                           style="width: 800px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <bolt-text headline>
          Slide 1
        </bolt-text>
      </bolt-carousel-slide>
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--next"
                           style="width: 800px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <bolt-text headline>
          Slide 2
        </bolt-text>
      </bolt-carousel-slide>
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready"
                           style="width: 800px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <bolt-text headline>
          Slide 3
        </bolt-text>
      </bolt-carousel-slide>
    </div>
    <div class="c-bolt-carousel__pagination c-bolt-carousel__pagination--clickable c-bolt-carousel__pagination--bullets">
      <span class="c-bolt-carousel__pagination__bullet c-bolt-carousel__pagination__bullet--active"
            tabindex="0"
            role="button"
            aria-label="Go to slide 1"
      >
      </span>
      <span class="c-bolt-carousel__pagination__bullet"
            tabindex="0"
            role="button"
            aria-label="Go to slide 2"
      >
      </span>
      <span class="c-bolt-carousel__pagination__bullet"
            tabindex="0"
            role="button"
            aria-label="Go to slide 3"
      >
      </span>
    </div>
    <span class="c-bolt-carousel__notification"
          aria-live="assertive"
          aria-atomic="true"
    >
    </span>
  </div>
  <div class="c-bolt-carousel__button c-bolt-carousel__button--previous c-bolt-carousel__button--outside c-bolt-carousel__button--disabled"
       tabindex="0"
       role="button"
       aria-label="Previous slide"
       aria-disabled="true"
  >
    <bolt-button slot="previous-btn"
                 color="secondary"
                 border-radius="full"
                 icon-only
                 tabindex="-1"
    >
      Previous
      <bolt-icon slot="before"
                 name="chevron-left"
      >
        <span class="c-bolt-icon c-bolt-icon--chevron-left c-bolt-icon--auto">
          <svg class="c-bolt-icon__icon">
            <use href="#chevron-left">
            </use>
          </svg>
        </span>
      </bolt-icon>
    </bolt-button>
  </div>
  <div class="c-bolt-carousel__button c-bolt-carousel__button--next c-bolt-carousel__button--outside"
       tabindex="0"
       role="button"
       aria-label="Next slide"
       aria-disabled="false"
  >
    <bolt-button slot="next-btn"
                 color="secondary"
                 border-radius="full"
                 icon-only
                 tabindex="-1"
    >
      Next
      <bolt-icon slot="after"
                 name="chevron-right"
      >
        <span class="c-bolt-icon c-bolt-icon--chevron-right c-bolt-icon--auto">
          <svg class="c-bolt-icon__icon">
            <use href="#chevron-right">
            </use>
          </svg>
        </span>
      </bolt-icon>
    </bolt-button>
  </div>
</bolt-carousel>
`;

exports[`carousel Basic 3 Slide <bolt-carousel> Renders w/ Variable (Auto) Slide Per View 1`] = `
<bolt-carousel slides-per-view="auto"
               class="is-ready"
>
  <div class="c-bolt-carousel c-bolt-carousel--no-overflow c-bolt-carousel--initialized c-bolt-carousel--horizontal"
       style="cursor: grab;"
  >
    <div class="c-bolt-carousel__wrapper"
         style="transform: translate3d(0px, 0px, 0px);"
    >
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--visible c-bolt-carousel__slide--active"
                           style="width: 380px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <bolt-text headline>
          Slide 1
        </bolt-text>
      </bolt-carousel-slide>
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--visible c-bolt-carousel__slide--next"
                           style="width: 380px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <bolt-text headline>
          Slide 2
        </bolt-text>
      </bolt-carousel-slide>
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready"
                           style="width: 380px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <bolt-text headline>
          Slide 3
        </bolt-text>
      </bolt-carousel-slide>
    </div>
    <div class="c-bolt-carousel__pagination c-bolt-carousel__pagination--clickable c-bolt-carousel__pagination--bullets">
      <span class="c-bolt-carousel__pagination__bullet c-bolt-carousel__pagination__bullet--active"
            tabindex="0"
            role="button"
            aria-label="Go to slide 1"
      >
      </span>
      <span class="c-bolt-carousel__pagination__bullet"
            tabindex="0"
            role="button"
            aria-label="Go to slide 2"
      >
      </span>
    </div>
    <span class="c-bolt-carousel__notification"
          aria-live="assertive"
          aria-atomic="true"
    >
    </span>
  </div>
  <div class="c-bolt-carousel__button c-bolt-carousel__button--previous c-bolt-carousel__button--inside c-bolt-carousel__button--disabled"
       tabindex="0"
       role="button"
       aria-label="Previous slide"
       aria-disabled="true"
  >
    <bolt-button size="medium"
                 border-radius="full"
                 color="secondary"
                 icon-only
    >
      Previous
      <bolt-icon size="large"
                 slot="before"
                 name="chevron-left"
      >
      </bolt-icon>
    </bolt-button>
  </div>
  <div class="c-bolt-carousel__button c-bolt-carousel__button--next c-bolt-carousel__button--inside"
       tabindex="0"
       role="button"
       aria-label="Next slide"
       aria-disabled="false"
  >
    <bolt-button size="medium"
                 border-radius="full"
                 color="secondary"
                 icon-only
    >
      Next
      <bolt-icon size="large"
                 slot="before"
                 name="chevron-right"
      >
      </bolt-icon>
    </bolt-button>
  </div>
</bolt-carousel>
`;

exports[`carousel Basic 7 Slide <bolt-carousel> Renders 1`] = `
<bolt-carousel class="is-ready">
  <div class="c-bolt-carousel c-bolt-carousel--no-overflow c-bolt-carousel--initialized c-bolt-carousel--horizontal"
       style="cursor: grab;"
  >
    <div class="c-bolt-carousel__wrapper"
         style="transform: translate3d(0px, 0px, 0px);"
    >
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--visible c-bolt-carousel__slide--active"
                           style="width: 790px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <bolt-text headline>
          Slide 1
        </bolt-text>
      </bolt-carousel-slide>
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--next"
                           style="width: 790px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <bolt-text headline>
          Slide 2
        </bolt-text>
      </bolt-carousel-slide>
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready"
                           style="width: 790px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <bolt-text headline>
          Slide 3
        </bolt-text>
      </bolt-carousel-slide>
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready"
                           style="width: 790px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <bolt-text headline>
          Slide 4
        </bolt-text>
      </bolt-carousel-slide>
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready"
                           style="width: 790px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <bolt-text headline>
          Slide 5
        </bolt-text>
      </bolt-carousel-slide>
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready"
                           style="width: 790px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <bolt-text headline>
          Slide 6
        </bolt-text>
      </bolt-carousel-slide>
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready"
                           style="width: 790px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <bolt-text headline>
          Slide 7
        </bolt-text>
      </bolt-carousel-slide>
    </div>
    <div class="c-bolt-carousel__pagination c-bolt-carousel__pagination--clickable c-bolt-carousel__pagination--bullets">
      <span class="c-bolt-carousel__pagination__bullet c-bolt-carousel__pagination__bullet--active"
            tabindex="0"
            role="button"
            aria-label="Go to slide 1"
      >
      </span>
      <span class="c-bolt-carousel__pagination__bullet"
            tabindex="0"
            role="button"
            aria-label="Go to slide 2"
      >
      </span>
      <span class="c-bolt-carousel__pagination__bullet"
            tabindex="0"
            role="button"
            aria-label="Go to slide 3"
      >
      </span>
      <span class="c-bolt-carousel__pagination__bullet"
            tabindex="0"
            role="button"
            aria-label="Go to slide 4"
      >
      </span>
      <span class="c-bolt-carousel__pagination__bullet"
            tabindex="0"
            role="button"
            aria-label="Go to slide 5"
      >
      </span>
      <span class="c-bolt-carousel__pagination__bullet"
            tabindex="0"
            role="button"
            aria-label="Go to slide 6"
      >
      </span>
      <span class="c-bolt-carousel__pagination__bullet"
            tabindex="0"
            role="button"
            aria-label="Go to slide 7"
      >
      </span>
    </div>
    <span class="c-bolt-carousel__notification"
          aria-live="assertive"
          aria-atomic="true"
    >
    </span>
  </div>
  <div class="c-bolt-carousel__button c-bolt-carousel__button--previous c-bolt-carousel__button--inside c-bolt-carousel__button--disabled"
       tabindex="0"
       role="button"
       aria-label="Previous slide"
       aria-disabled="true"
  >
    <bolt-button size="medium"
                 border-radius="full"
                 color="secondary"
                 icon-only
    >
      Previous
      <bolt-icon size="large"
                 slot="before"
                 name="chevron-left"
      >
      </bolt-icon>
    </bolt-button>
  </div>
  <div class="c-bolt-carousel__button c-bolt-carousel__button--next c-bolt-carousel__button--inside"
       tabindex="0"
       role="button"
       aria-label="Next slide"
       aria-disabled="false"
  >
    <bolt-button size="medium"
                 border-radius="full"
                 color="secondary"
                 icon-only
    >
      Next
      <bolt-icon size="large"
                 slot="before"
                 name="chevron-right"
      >
      </bolt-icon>
    </bolt-button>
  </div>
</bolt-carousel>
`;
